removed css no longer needed, line breaks in text expandos

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -588,7 +588,6 @@ body.dark textarea#comment {
     margin: 6px;
     display: block;
     border: 1px solid lightgray;
-    white-space: pre-wrap;
 }
 .post a {
     text-decoration: none;
